# angelscript-lsp

./: .gitignore  .gitmodules  README.md  scratch.as  test.cpp  test_auto.as  test_out2.txt
.agents/: AGENTS.md
.github/workflows/: ci.yml  cmake.yml
client/: .vscodeignore  CHANGELOG.md  language-configuration.json  package-lock.json  package.json
client/src/: extension.ts
client/syntaxes/: angelscript.tmLanguage.json
scripts/: auto_translate.py  diagnostics_es.json  generate_diagnostic_i18n.py
server/: CMakeLists.txt  hover_dump.txt  results.txt  scratch_hover.cpp  test.as  test_array.cpp
server/cmake/: AngelScript.cmake  Dependencies.cmake  TreeSitter.cmake
server/include/: CompletionHandler.h  DefinitionHandler.h  HoverHandler.h  LspServer.h  ReferencesHandler.h  SafeCtype.h  ScriptEngine.h  TokenHarvester.h
server/include/analysis/: DiagnosticCache.h  Symbol.h  SymbolCollector.h  SymbolResolver.h  SymbolTable.h
server/include/features/hover/: HoverInfo.h
server/include/features/semantic_tokens/: SemanticTokensHandler.h
server/include/i18n/: DiagnosticI18n.h  LspStrings.h
server/include/parser/utils/: Queries.h  QueryRunner.h
server/scratch/: ast_test.as  dump.cpp
server/src/: CompletionHandler.cpp  DefinitionHandler.cpp  HoverHandler.cpp  LspServer.cpp  ReferencesHandler.cpp  ScriptEngine.cpp  TokenHarvester.cpp  main.cpp
server/src/analysis/: DiagnosticCache.cpp  DiagnosticCache.h  PredefinedLoader.cpp  PredefinedLoader.h  SymbolCollector.cpp  SymbolCollector.h  SymbolResolver.cpp  SymbolResolver.h  SymbolTable.cpp  SymbolTable.h  TypeEvaluator.cpp  TypeEvaluator.h  ValidationOracle.cpp  ValidationOracle.h
server/src/analysis/validation/: IValidationRule.h  ValidationContext.h  ValidationUtils.cpp  ValidationUtils.h
server/src/analysis/validation/rules/: ArgumentRule.cpp  ArgumentRule.h  ClassDeclRule.cpp  ClassDeclRule.h  FunctionDeclRule.cpp  FunctionDeclRule.h  SyntaxErrorRule.cpp  SyntaxErrorRule.h  TypeValidationRule.cpp  TypeValidationRule.h
server/src/analysis/validators/: ClassValidator.cpp  ClassValidator.h  ControlFlowValidator.cpp  ControlFlowValidator.h  EnumTypeDefValidator.cpp  EnumTypeDefValidator.h  ExpressionValidator.cpp  ExpressionValidator.h  FunctionValidator.cpp  FunctionValidator.h  ImportValidator.cpp  ImportValidator.h  UsingValidator.cpp  UsingValidator.h
server/src/config/: ServerConfig.cpp  ServerConfig.h
server/src/document/: Document.cpp  Document.h
server/src/features/completion/: CompletionHandler.cpp  CompletionHandler.h
server/src/features/definition/: DefinitionHandler.cpp  DefinitionHandler.h
server/src/features/hover/: HoverHandler.cpp  HoverHandler.h  HoverInfo.cpp  HoverInfo.h
server/src/features/semantic_tokens/: SemanticTokensHandler.cpp  SemanticTokensHandler.h
server/src/features/signature_help/: SignatureHelpHandler.cpp  SignatureHelpHandler.h
server/src/i18n/: DiagnosticI18n.cpp  DiagnosticI18n.h  LspStrings.cpp  LspStrings.h
server/src/lsp/: Server.cpp  Server.h
server/src/parser/utils/: Queries.h  QueryRunner.cpp  QueryRunner.h
server/src/test/: test_parser.cpp
server/src/utils/: DoxygenParser.cpp  DoxygenParser.h  LspLogger.cpp  LspLogger.h
server/tests/: ComplexHoverTests.cpp  DocumentTests.cpp  PredefinedLoaderTests.cpp  ScriptFuncdefTests.cpp  ScriptNamespaceTests.cpp  SymbolCollectorTests.cpp  SymbolResolverTests.cpp  SymbolTableTests.cpp  TreeSitterTests.cpp  ValidationOracleTests.cpp  test_main.cpp
server/tests/analysis/: DiagnosticCacheTests.cpp  PredefinedLoaderTests.cpp  RealIntegrationTests.cpp  SymbolCollectorTests.cpp  SymbolResolverTests.cpp  SymbolTableTests.cpp  ValidationOracleTests.cpp  ValidationPipelineTests.cpp
server/tests/angelscript/: ScriptClassTests.cpp  ScriptFuncdefTests.cpp  ScriptNamespaceTests.cpp
server/tests/angelscript_files/: test.as  test_features.as  test_hover.as
server/tests/document/: DocumentTests.cpp
server/tests/features/: ComplexHoverEdgeCases.cpp  ComplexHoverTests.cpp  DefinitionHandlerTests.cpp  HoverRenderTests.cpp  HoverTemplateTest.cpp  PrintAST.h  SemanticTokensTests.cpp
server/tests/features/completion/: CompletionTests.cpp
server/tests/features/definition/: DefinitionHandlerTests.cpp
server/tests/features/hover/: ComplexHoverEdgeCases.cpp  ComplexHoverTests.cpp  HoverRenderTests.cpp  HoverTemplateTest.cpp
server/tests/features/semantic_tokens/: SemanticTokensTests.cpp
server/tests/features/signature_help/: SignatureHelpTests.cpp
server/tests/helpers/: TestFixtures.h  TestUtils.h
server/tests/i18n/: LocalizationTests.cpp
server/tests/parser/: TreeSitterTests.cpp
tree-sitter-angelscript/: Cargo.toml  README.md  grammar.js  temp.as  test.as  test_ast.as  test_grammar.js  tree-sitter.json
tree-sitter-angelscript/queries/: highlights.scm  locals.scm
tree-sitter-angelscript/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-angelscript/test/corpus/: declarations.txt  error_recovery.txt  expressions.txt  preprocessor.txt  types.txt
